Remade navigation in app: - LandingActivity.kt hosts fragmentContainer with landing_nav.xml graph - UserActivity.kt hosts fragmentContainer with user_nav.xml graph - ParamedicActivity.kt hosts fragmentContainer with paramedic_nav.xml graph
Added OpenStreetMaps mapView with one marker and user location

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,11 @@
     package="com.example.mobileclient">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"  />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -13,8 +17,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileClient"
         android:usesCleartextTraffic="true">
+<!--        <service-->
+<!--            android:name="MyNavigationService"-->
+<!--            android:foregroundServiceType="location">-->
+<!--        </service>-->
         <activity
-            android:name=".MainActivity"
+            android:name=".LandingActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +30,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ParamedicActivity"/>
+        <activity android:name=".UserActivity"/>
     </application>
 
 </manifest>
