--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
         <activity android:name=".ParamedicActivity"/>
         <activity android:name=".UserActivity"/>
+        <activity android:name=".OnboardingActivity"/>
     </application>
 
 </manifest>
