--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'androidx.test:core-ktx:1.4.0'
     implementation 'org.osmdroid:osmdroid-android:6.1.11'
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'com.github.MKergall:osmbonuspack:6.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
