--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
         viewBinding true
         dataBinding true
     }
+    namespace 'com.example.mobileclient'
 }
 
 dependencies {
