--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <!--            android:foregroundServiceType="location">-->
         <!--        </service>-->
         <activity
-            android:name=".LandingActivity"
+            android:name=".activities.LandingActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,11 +33,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ParamedicActivity" />
-        <activity android:name=".UserActivity" />
-        <activity android:name=".OnboardingActivity" />
+        <activity android:name=".activities.ParamedicActivity" />
+        <activity android:name=".activities.UserActivity" />
+        <activity android:name=".activities.OnboardingActivity" />
         <activity
-            android:name=".ScanBandCodeActivity"
+            android:name=".activities.ScanBandCodeActivity"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:theme="@style/zxing_CaptureTheme" />
