--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'com.github.MKergall:osmbonuspack:6.9.0'
     implementation 'androidx.webkit:webkit:1.5.0'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'androidx.core:core-ktx:+'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
